[update] 幸せになりました

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,15 @@
   },
   "parserOptions": {
     "sourceType": "module"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".ts",
+          ".tsx"
+        ]
+      }
+    }
   }
 }
