--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-  "target": "esnext",
-    "module": "commonjs",
-    "noImplicitAny": true
+    "lib": [
+      "esnext",
+      "dom"
+    ],
   }
 }
