--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3"
 services:
   node:
-    build: docker
-    working_dir: "/usr/src/app"
+    image: node:10.16.3-alpine
+    working_dir: "/app"
     environment:
-      - NODE_SLACK_TOKEN
-      - NODE_CONOHA_PASS
-      - NODE_CONOHA_TENANT_ID
-      - NODE_CONOHA_USERNAME
+      - SLACK_TOKEN
+      - CONOHA_PASS
+      - CONOHA_TENANT_ID
+      - CONOHA_USERNAME
     volumes:
-      - ./:/usr/src/app
+      - ./:/app
